--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "cra-template": "1.2.0",
     "crypto-js": "^4.2.0",
     "i18next": "^24.2.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-i18next": "^15.4.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.1",
@@ -44,7 +44,7 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "typescript": "^4.9.5"
+  "resolutions": {
+    "typescript": "4.9.5"
   }
 }
