actualizacion creacion de la logica de splash para validar las credenciales, creacion de logica en profiles para validar la sesion y redirigir a login, mejora en el diseño de profiles

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.3.1",
+    "@noriginmedia/react-spatial-navigation": "^2.12.9",
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
     "crypto-js": "^4.2.0",
