--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-i18next": "^15.4.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "sass": "^1.83.4",
     "scss": "^0.2.4",
     "web-vitals": "^4.2.4"
@@ -44,8 +44,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "resolutions": {
-    "typescript": "4.9.5"
   }
 }
