--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.2",
+    "@noriginmedia/norigin-spatial-navigation": "^2.3.0",
     "@noriginmedia/react-spatial-navigation": "^2.12.9",
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
